--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <title>Asteroids</title>
+    <img src="static/asteroid_logo.png" class="asteroid-img"></img>
     <link type="text/css" rel="stylesheet" href="game.css" />
   </head>
-  <body>
+  <body bgcolor="#000000"
     <h1>Play Asteroids</h1>
-    <canvas id="screen" width="760" height="480"></canvas>
+    <canvas id="screen" width="760" height="480" class="middle"></canvas>
     <h2>Instructions</h2>
     <script type="text/javascript" src="bundle.js"></script>
   </body>
