Added player on asteroid collisions, lives

--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <img src="static/asteroid_logo.png" class="asteroid-img"></img>
     <link type="text/css" rel="stylesheet" href="game.css" />
   </head>
-  <body bgcolor="#000000"
-    <h1>Play Asteroids</h1>
+  <body bgcolor="#000000">
     <canvas id="screen" width="760" height="480" class="middle"></canvas>
-    <h2>Instructions</h2>
+    <p class = "instructions3" style="color:white"><i>Instructions:</i></h2>
+    <p class = "instructions2" style="color:white"><i>Use space and the arrow keys</i></h2>
+    <p class = "instructions" style="color:white"><i>to destroy all the asteroids</i></h2>
+    <div id = "score" style="color:white"></div>
+    <div id = "level" style="color:white"></div> 
+    <div id = "lives" style="color:white"></div>
+    <p id = "game over" class="middle-space p-other" style="color:white"></p> 
+    <p id = "final" class="middle-score p-other" style="color:red"></p>
     <script type="text/javascript" src="bundle.js"></script>
   </body>
 </html>
+s
