--- a/index.html
+++ b/index.html
@@ -7,15 +7,20 @@
   </head>
   <body bgcolor="#000000">
     <canvas id="screen" width="760" height="480" class="middle"></canvas>
-    <p class = "instructions3" style="color:white"><i>Instructions:</i></h2>
-    <p class = "instructions2" style="color:white"><i>Use space and the arrow keys</i></h2>
-    <p class = "instructions" style="color:white"><i>to destroy all the asteroids</i></h2>
-    <div id = "score" style="color:white"></div>
-    <div id = "level" style="color:white"></div> 
-    <div id = "lives" style="color:white"></div>
+    <div id = "score" style="color:white" class = "middle-1"></div>
+    <div id = "level" style="color:white" class = "middle-2"></div> 
+    <div id = "lives" style="color:white" class = "middle-3"></div>
     <p id = "game over" class="middle-space p-other" style="color:white"></p> 
     <p id = "final" class="middle-score p-other" style="color:red"></p>
+    <p id = "nextLevel" class="middle-space p-other" style="color:white"></p> 
     <script type="text/javascript" src="bundle.js"></script>
   </body>
+  <footer>
+      <p style="color:white"> Instructions: use the arrow keys to move against the force of gravity.
+      Use the spacebar to shoot the asteroids until there are no asteroids left.
+      Developed by <a href="http://www.RyanPaulWilliams.com">Ryan Williams.</a>
+      Logo created with: http://logomakr.com.
+      Sounds used under creative commons license.
+      <a href="http://www.github.com/rpwilliams">Click here for source code</a></p>
+  </footer>
 </html>
-s
