--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Asteroids</title>
-    <img src="static/asteroid_logo.png" class="asteroid-img"></img>
-    <link type="text/css" rel="stylesheet" href="game.css" />
+    <img src="static/javascript/Asteroids/static/asteroid_logo.png" class="asteroid-img"></img>
+    <link type="text/css" rel="stylesheet" href="static/css/asteroids.css" />
   </head>
   <body bgcolor="#000000">
     <canvas id="screen" width="760" height="480" class="middle"></canvas>
@@ -13,7 +13,7 @@
     <p id = "game over" class="middle-space p-other" style="color:white"></p> 
     <p id = "final" class="middle-score p-other" style="color:red"></p>
     <p id = "nextLevel" class="middle-space p-other" style="color:white"></p> 
-    <script type="text/javascript" src="bundle.js"></script>
+    <script type="text/javascript" src="static/javascript/Asteroids/bundle.js"></script>
   </body>
   <footer>
       <p style="color:white"> Instructions: use the arrow keys to move against the force of gravity.
